--- a/agregar-producto.html
+++ b/agregar-producto.html
@@ -52,7 +52,7 @@
                     </a>
                   </li>
                 <li>
-                    <a href="index.html">
+                    <a href="index.php">
                       <i class="fa-solid fa-house"></i>
                       <span>Volver</span>
                     </a>
@@ -62,7 +62,6 @@
             </div>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/js/all.min.js" integrity="sha512-naukR7I+Nk6gp7p5TMA4ycgfxaZBJ7MO5iC3Fp6ySQyKFHOGfpkSZkYVWV5R7u7cfAicxanwYQ5D1e17EfJcMA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
             <h2>Ingresar nuevo producto</h2>   
-            <hr />
             <section class="agregar-producto">
             <form action="agregar_producto.php" method="post"> 
             <br>
