--- a/editar-producto.html
+++ b/editar-producto.html
@@ -1,11 +1,72 @@
-<html>
-    <body>
-        <h2>Ingresar codigo del producto a editar (solo el codigo de fabricante, no importa si es repetido)</h2>   
-        <hr />
+<!DOCTYPE html>
+<html lang="es">
+
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+            <title>SECCION PRODUCTO</title>
+            <link rel="stylesheet" href="panel_control.css" />
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+            <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        </head>
+        <h2 class="title" id="productos">solo el codigo de fabricante, no importa si es repetido</h2>
+           <br>
+          
+            <div class="sidebar">
+              <img src="imagenes/LOGO.ico"width="80" alt="">
+              <ul class="nav">
+                <li>
+                  <a href="agregar-producto.html">
+                    <i class="fa-solid fa-plus"></i>
+                    <span>Ingresar producto nuevo</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="eliminar-producto.html">
+                    <i class="fa-solid fa-minus"></i>
+                    <span>Desafectar producto</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="editar-producto.html">
+                    <i class="fa-solid fa-pen"></i>
+                    <span>Editar producto</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="volver-activar-producto.html">
+                    <i class="fas fa-cog"></i>
+                    <span>Volver a activar producto</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="nuevo_producto_copiado.html">
+                    <i class="fa-solid fa-circle-up"></i> 
+                    <span>Agregar productos en base a otros</span>
+                  </a>
+                </li>
+                <li>
+                    <a href="definitivo.html">
+                      <i class="fa-solid fa-trash"></i>
+                      <span>Eliminar definitvamente producto</span>
+                    </a>
+                  </li>
+                <li>
+                    <a href="index.html">
+                      <i class="fa-solid fa-house"></i>
+                      <span>Volver</span>
+                    </a>
+                  </li>
+              </ul>
+            </div>
+            </div>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/js/all.min.js" integrity="sha512-naukR7I+Nk6gp7p5TMA4ycgfxaZBJ7MO5iC3Fp6ySQyKFHOGfpkSZkYVWV5R7u7cfAicxanwYQ5D1e17EfJcMA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <section class="editar-producto">
         <form action="editar_producto.php" method="post"  > 
         <br>
-        <h3>Codigo</h3>   
-        <p><input type="text" name="prod" id="prod"></p> 
-        <ul><li><button type="submit">Ingresar</button></li></ul>
+        <h3>CODIGO DEL PRODUCTO A EDITAR:</h3>   
+        <p><input class="controls3" type="text" name="prod" id="prod"></p> 
+        <ul><button type="submit"><i class="fa-solid fa-right-to-bracket"></i>Ingresar</button></ul>
+        </section>
     </body>
 </html>
