--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <a href="#nosotros">Nosotros</a>
             <a href="#contacto">ConTacto</a>
             <a href="#productos">Productos</a>
-            <a href="iniciar_sesion.html">Iniciar sesion</a>
+            <a href="carrito.php">Carrito</a>
+            <a href="cerrar_sesion.php">Cerrar sesion</a>
         
         </nav>
     </div>
