--- a/panel_control.html
+++ b/panel_control.html
@@ -58,7 +58,7 @@
                     </a>
                   </li>
                 <li>
-                    <a href="index.html">
+                    <a href="index.php">
                       <i class="fa-solid fa-house"></i>
                       <span>Volver</span>
                     </a>
