--- a/agregar-producto.html
+++ b/agregar-producto.html
@@ -51,6 +51,12 @@
                       <span>Eliminar definitvamente producto</span>
                     </a>
                   </li>
+                  <li>
+                    <a href="ver_productos.php">
+                      <i class="fa-solid fa-trash"></i>
+                      <span>Ver todos los productos ingresados</span>
+                    </a>
+                  </li>
                 <li>
                     <a href="index.php">
                       <i class="fa-solid fa-house"></i>
