--- a/definitivo.html
+++ b/definitivo.html
@@ -52,8 +52,14 @@
                <span>Eliminar definitvamente producto</span>
              </a>
            </li>
+           <li>
+            <a href="ver_productos.php">
+              <i class="fa-solid fa-trash"></i>
+              <span>Ver todos los productos ingresados</span>
+            </a>
+          </li>
          <li>
-             <a href="index.html">
+             <a href="index.php">
                <i class="fa-solid fa-house"></i>
                <span>Volver</span>
              </a>
