--- a/index_trabajador.html
+++ b/index_trabajador.html
@@ -61,7 +61,8 @@
             <a href="#nosotros">Nosotros</a>
             <a href="#contacto">ConTacto</a>
             <a href="#productos">Productos</a>
-            <a href="iniciar_sesion.html">Iniciar sesion</a>
+            <a href="panel_control.html">Panel de control</a>
+            <a href="cerrar_sesion.php">Cerrar sesion</a>
         </nav>
     </div>
     
