--- a/nuevo_producto_copiado.html
+++ b/nuevo_producto_copiado.html
@@ -59,7 +59,7 @@
             </a>
           </li>
          <li>
-             <a href="index.php">
+             <a href="index_trabajador.html">
                <i class="fa-solid fa-house"></i>
                <span>Volver</span>
              </a>
