--- a/index.html
+++ b/index.html
@@ -291,9 +291,6 @@
         <br>
         <br>
     </section>
-<<<<<<< Updated upstream
-    
-=======
     <section class="titulo">
     <h2>Nuestros principales aliados comerciales</h2>
     </section>
@@ -302,7 +299,7 @@
         <a href="https://new.abb.com/south-america/productos-y-servicios"><img src="imagenes/1x/ABB.jpg" width="100"></a>
     </div>
     <div class="c1">
-        <a href="https://lct.com.ar/catalogo/"><img src="imagenes/1x/LCT.jpg" width="100"></a>
+        <a href="https://lct.com.ar/catalogo/"><img src="imagenes/1x/ZOLOCA.jpg" width="100"></a>
     </div>
     <div class="c1">
         <a href="https://new.abb.com/south-america/productos-y-servicios"><img src="imagenes/1x/SCHNEIDER.jpg" width="100"></a>
@@ -314,19 +311,18 @@
         <a href="https://new.abb.com/south-america/productos-y-servicios"><img src="imagenes/1x/3M.jpg" width="100"></a>
     </div>
     <div class="c1">
-        <a href="https://new.abb.com/south-america/productos-y-servicios"><img src="imagenes/1x/WENTINCK.jpg" width="100"></a>
+        <a href="https://new.abb.com/south-america/productos-y-servicios"><img src="imagenes/1x/" width="100"></a>
     </div>
     <div class="c1">
         <a href="https://new.abb.com/south-america/productos-y-servicios"><img src="imagenes/1x/GENROD.jpg" width="100"></a>
     </div> <div class="c1">
         <a href="https://new.abb.com/south-america/productos-y-servicios"><img src="imagenes/1x/IMSA.jpg" width="100"></a>
     </div> <div class="c1">
-        <a href="https://new.abb.com/south-america/productos-y-servicios"><img src="imagenes/1x/LS.jpg" width="100"></a>
+        <a href="https://new.abb.com/south-america/productos-y-servicios"><img src="imagenes/1x/CAMBRE.jpg" width="100"></a>
     </div> <div class="c1">
         <a href="https://new.abb.com/south-america/productos-y-servicios"><img src="imagenes/1x/SIEMENS.jpg" width="100"></a>
     </div> 
     </section>
->>>>>>> Stashed changes
     <section class="nosotros">
         <br>
         <h2 class="title" id="nosotros">Nosotros</h2>
