--- a/registrarse.html
+++ b/registrarse.html
@@ -12,12 +12,15 @@
 <body>
   <section class="form-register">
     <h4>Formulario Registro</h4>
+    <form action="registro.php" method="post"> 
     <input class="controls" type="text" name="nombres" id="nombres" placeholder="Nombre">
     <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Apellido">
     <input class="controls" type="email" name="correo" id="correo" placeholder="Correo">
-    <input class="controls" type="password" name="correo" id="correo" placeholder="Contraseña">
+    <input class="controls" type="password" name="contrasenia" id="contrasenia" placeholder="Contraseña">
+    <input class="controls" type="number" name="tel" id="tel" placeholder="Telefono">
     <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></p>
     <input class="botons" type="submit" value="Registrar">
+    </form>
     <p><a href="iniciar_sesion.html">Ya tengo Cuenta</a></p>
   </section>
 
