--- a/index_cliente.html
+++ b/index_cliente.html
@@ -201,7 +201,7 @@
         <form action="mostrar_productos.php" method="post">
         <p></p>
             <div class="contenedor1">
-                <button type = "submit" value = "Distribucion electrica industrial" id = "categoria" name = "categoria">
+                <button type = "submit" value = "Distribucion electrica industrial y monitoreo de redes e instrumentos" id = "categoria" name = "categoria">
                      <figure>
                          <img src="imagenes/1x/DIST. INDUSTRIAL.jpg">
                          <div class="capa1">
