--- a/editar-producto.html
+++ b/editar-producto.html
@@ -53,7 +53,7 @@
                   </li>
                   <li>
                     <a href="ver_productos.php">
-                      <i class="fa-solid fa-trash"></i>
+                      <i class="fa-solid fa-list-ul"></i>
                       <span>Ver todos los productos ingresados</span>
                     </a>
                   </li>
