--- a/registrarse.html
+++ b/registrarse.html
@@ -17,7 +17,8 @@
     <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Apellido">
     <input class="controls" type="email" name="correo" id="correo" placeholder="Correo">
     <input class="controls" type="password" name="contrasenia" id="contrasenia" placeholder="Contraseña">
-    <input class="controls" type="number" name="tel" id="tel" placeholder="Telefono">
+    <input class="controls" type="number" name="tel" id="tel" placeholder="Telefono fijo (opcional)">
+    <input class="controls" type="number" name="cel" id="cel" placeholder="Celular (opcional)">
     <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></p>
     <input class="botons" type="submit" value="Registrar">
     </form>
