--- a/droga/pito.html
+++ b/droga/pito.html
@@ -9,21 +9,25 @@
 </head>
 <body>
     <div class="containerall">
+        <form action="mostrar_productos.php" method="post">
                 <div class="container1">
                 <figure>
                     <img src="imagenes/DIST. INDUSTRIAL.jpg">
                     <div class="box1">
+                        <button type = "submit" value = "Distribucion electrica industrial" id = "categoria" name = "categoria">Ver productos</button>
                         <h3>Distribucion electrica industrial</h3>
                         <p>Todo lo necesario en maniobra y monitoreo de redes de baja tensión, interruptores de potencia, ductos, bandejas, cables subterraneos y protecciones</p>
-                </figure>
+                    </figure>
+                
         </div>
     </div>
                 <div class="container2">
         <figure>
             <img src="imagenes/AUTOMATIZACION.jpg">
             <div class="box2">
-                <h3>Distribucion electrica domestica</h3>
-                <p>CUADRITO 2</p>
+                <button type = "submit" value = "Automatizacion" id = "categoria" name = "categoria">Ver productos</button>
+                <h3>Automatizacion</h3>
+                <p>Arquitecturas de sistemas automatizados con PLC, HMI, sensores y sistemas scada.</p>
             </div>
         </div>
         </figure>
@@ -31,6 +35,7 @@
             <figure>
                 <img src="imagenes/CONTROL DE POTENCIA.jpg">
                 <div class="box3">
+                    <button type = "submit" value = "Control de potencia" id = "categoria" name = "categoria">Ver productos</button>
                     <h3>Distribucion electrica industrial</h3>
                     <p>Todo lo necesario en maniobra y monitoreo de redes de baja tensión, interruptores de potencia, ductos, bandejas, cables subterraneos y protecciones</p>
             </figure>
@@ -40,6 +45,7 @@
     <figure>
         <img src="imagenes/DIST. COMERCIAL.jpg">
         <div class="box4">
+            <button type = "submit" value = "Control de potencia" id = "categoria" name = "categoria">Ver productos</button>
             <h3>Distribucion electrica terciaria</h3>
             <p>Todo lo necesario en maniobra y monitoreo de redes de baja tensión, interruptores de potencia, ductos, bandejas, cables subterraneos y protecciones</p>
     </figure>
@@ -49,6 +55,7 @@
     <figure>
         <img src="imagenes/ILUMINACIÓN.jpg">
         <div class="box5">
+            <button type = "submit" value = "Iluminacion" id = "categoria" name = "categoria">Ver productos</button>
             <h3>ILUMINACIÓN</h3>
             <p>Todo lo necesario en maniobra y monitoreo de redes de baja tensión, interruptores de potencia, ductos, bandejas, cables subterraneos y protecciones</p>
     </figure>
@@ -58,6 +65,7 @@
     <figure>
         <img src="imagenes/ACCESORIOS.jpg">
         <div class="box6">
+            <button type = "submit" value = "Accesorios" id = "categoria" name = "categoria">Ver productos</button>
             <h3>ACCESORIOS</h3>
             <p>Todo lo necesario en maniobra y monitoreo de redes de baja tensión, interruptores de potencia, ductos, bandejas, cables subterraneos y protecciones</p>
     </figure>
