--- a/definitivo.html
+++ b/definitivo.html
@@ -53,8 +53,20 @@
              </a>
            </li>
            <li>
-            <a href="ver_productos.php">
+            <a href="ver_pedidos.php">
               <i class="fa-solid fa-list-ul"></i>
+              <span>Ver pedidos</span>
+            </a>
+          </li>
+           <li>
+            <a href="ver_usuarios.php">
+              <i class="fa-solid fa-list-ul"></i>
+              <span>Ver usuarios que ingresaron</span>
+            </a>
+          </li>
+           <li>
+            <a href="ver_productos.php">
+              <i class="fa-solid fa-trash"></i>
               <span>Ver todos los productos ingresados</span>
             </a>
           </li>
