--- a/panel_control.html
+++ b/panel_control.html
@@ -52,6 +52,18 @@
                     </a>
                   </li>
                   <li>
+                    <a href="ver_pedidos.php">
+                      <i class="fa-solid fa-list-ul"></i>
+                      <span>Ver pedidos</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="ver_usuarios.php">
+                      <i class="fa-solid fa-list-ul"></i>
+                      <span>Ver usuarios que ingresaron</span>
+                    </a>
+                  </li>
+                  <li>
                     <a href="ver_productos.php">
                       <i class="fa-solid fa-list-ul"></i>
                       <span>Ver todos los productos ingresados</span>
