--- a/index.html
+++ b/index.html
@@ -585,9 +585,6 @@ h2{
     width: 100%;
     max-width: 1200px;
     margin: auto;
-    display:grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 100px;
     padding: 45px 0px;
 }
 .pie-pagina .grupo-1 .box figure{
@@ -620,9 +617,9 @@ h2{
 }
 .pie-pagina .grupo-1 .box h4{
     color: #efefef;
-    margin-left: 100px;
+    margin-left: 80px;
     font-size: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
 }
 .pie-pagina .grupo-1 .box p{
     color: #efefef;
@@ -646,17 +643,13 @@ h2{
     align-items: right;
 }
 .pie-pagina .grupo-1 .red-social a{
+    font-size: 20px;
     text-decoration: none;
-    width: 45px;
-    height: 45px;
-    line-height: 45px;
     color: #fff;
-    margin-top: -800px;
-    margin-left: 880px;
+    margin-left: 81px;
     background-color: #0d2033;
-    align-items: right;
     text-align: center;
-    transition: all 300ms ease;
+   
 }
 .pie-pagina .grupo-1 .red-social a:hover{
     color: rgb(0, 1, 7);
@@ -670,7 +663,16 @@ h2{
 .pie-pagina .grupo-2 small{
     font-size: 15px;
 }
-
+.head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 120px;
+    background: #516ba1;
+    position: fixed;
+    width: 100%;
+    z-index: 100;
+}
 
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -682,14 +684,9 @@ h2{
     <div class="head">
 
         <div class="logo">
-            <img src="Imagenes/LOGO.ico" width="80" alt="">
+            <img src="Imagenes/logo modificado.png" width="280" alt="">
         </div>
-        <div class="logo1">
-            <a href="https://www.se.com/ar/es/"><img src="Imagenes/1x/Recurso 4.png" width="100" alt=""></a>
-        </div>
-        <div class="logo2">
-            <a href="https://new.abb.com/south-america/el-latam-tour"><img src="Imagenes/1x/Recurso 5.png" width="100" alt=""></a>
-        </div>
+
         <nav class="navbar">
             <a href="#inicio">Inicio</a>
             <a href="#nosotros">Nosotros</a>
@@ -709,7 +706,7 @@ h2{
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="imagenes/inicio/slid1.jpg" class="d-block w-100" alt="...">
+            <img src="imagenes/inicio/asd.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="imagenes/inicio/prueba-02.jpg" class="d-block w-100" alt="...">
@@ -905,7 +902,7 @@ h2{
         <a href="http://samet.com.ar/#productoss"><img src="imagenes/1x/SAMET.jpg" width="120"></a>
     </div>
     <div class="c1">
-        <a href="https://www.3m.com.ar/3M/es_AR/p/"><img src="imagenes/1x/3M.jpg" width="120"></a>
+        <a href="https://www.3m.com.ar/3M/es_AR/p/c/electrico/"><img src="imagenes/1x/3M.jpg" width="120"></a>
     </div>
     <div class="c1">
         <a href="https://www.microcontrol.com.ar/"><img src="imagenes/1x/MICROCONTROL.jpg" width="120"></a>
@@ -1052,15 +1049,15 @@ h2{
                     7547-6554</h5>
             </div>
                     <div class="box">
-                    <h4>Redes sociales:</h4>
-                    </div>
+                    <h4>Nuestras redes sociales:</h4>
                     <div class="red-social">
-                        <a href="https://www.facebook.com/people/Enerpampa-SA-Distribuidor-de-Materiales-El%C3%A9ctricos/100063664860017/?ref=page_internal&mt_nav=0" class="fa fa-facebook"></a>
-                        <a href="https://www.instagram.com/enerpampa.sa/"class="fa fa-instagram"></a>
-                        <a href="https://www.linkedin.com/in/enerpampa-s-a-355a45254/" class="fa fa-linkedin"></a>
+                    <a href="https://www.facebook.com/people/Enerpampa-SA-Distribuidor-de-Materiales-El%C3%A9ctricos/100063664860017/?ref=page_internal&mt_nav=0" class="fa fa-facebook"></a>
+                    <a href="https://www.instagram.com/enerpampa.sa/"class="fa fa-instagram"></a>
+                    <a href="https://www.linkedin.com/in/enerpampa-s-a-355a45254/" class="fa fa-linkedin"></a>
                     </div>
                 </div>
             </div>
+        </div>
             <div class="grupo-2">
                 <small>&copy; 2022 Desarrolladores: Leandro Arnaldi y Matias Botarini</small>
             </div>
