--- a/registrarse.html
+++ b/registrarse.html
@@ -17,8 +17,22 @@
     <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Apellido">
     <input class="controls" type="email" name="correo" id="correo" placeholder="Correo">
     <input class="controls" type="password" name="contrasenia" id="contrasenia" placeholder="Contraseña">
-    <input class="controls" type="number" name="tel" id="tel" placeholder="Telefono fijo (opcional)">
+    <input class="controls" type="number" name="tel" id="tel" placeholder="Telefono">
     <input class="controls" type="number" name="cel" id="cel" placeholder="Celular (opcional)">
+    <label for="rubro">Seleccione el rubro a que se dedica(opcional)</label>
+    <select name="rubro" id="rubro">
+    <option  name="rubro" id="rubro" value="Instalador electricista">Instalador electricista</option>
+    <option  name="rubro" id="rubro" value="Tablerista e integrador de sistemas">Tablerista e integrador de sistemas</option>
+    <option  name="rubro" id="rubro" value="Industria">Industria</option>
+    <option  name="rubro" id="rubro" value="Constructora">Constructora</option>
+    <option  name="rubro" id="rubro" value="Automatista">Automatista</option>
+    <option  name="rubro" id="rubro" value="Fabricacion de maquinas">Fabricación de maquinas</option>
+    <option  name="rubro" id="rubro" value="Montaje electrico">Montaje electríco</option>
+    <option  name="rubro" id="rubro" value="Mantenimiento electrico">Mantenimiento electríco</option>
+    <option  name="rubro" id="rubro" value="Usuario final">Usuario final</option>
+    <option  name="rubro" id="rubro" value="Ingenieria">Ingenieria</option>
+    <option  name="rubro" id="rubro" value="Otro">Otro</option>
+</select>
     <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></p>
     <input class="botons" type="submit" value="Registrar">
     </form>
