--- a/agregar-producto.html
+++ b/agregar-producto.html
@@ -66,7 +66,7 @@
                   <li>
                     <a href="ver_productos.php">
                       <i class="fa-solid fa-trash"></i>
-                      <span>Ver todos los productos ingresados</span>
+                      <span>Ver todos los productos </span>
                     </a>
                   </li>
                 <li>
