--- a/panel_control.html
+++ b/panel_control.html
@@ -66,7 +66,7 @@
                   <li>
                     <a href="ver_productos.php">
                       <i class="fa-solid fa-list-ul"></i>
-                      <span>Ver todos los productos ingresados</span>
+                      <span>Ver todos los productos</span>
                     </a>
                   </li>
                 <li>
