--- a/index_trabajador.html
+++ b/index_trabajador.html
@@ -695,6 +695,7 @@ h2{
             <a href="#nosotros">Nosotros</a>
             <a href="#contacto">ConTacto</a>
             <a href="#productos">Productos</a>
+            <a href="panel_control.html">Panel</a>
             <a href="cerrar_sesion.php">Cerrar sesion</a>
         </nav>
     </div>
@@ -829,7 +830,7 @@ h2{
                 <figure>
                     <img src="imagenes/1x/DIST. INDUSTRIAL.jpg">
                     <div class="box1">
-                        <button type = "submit" value = "Distribucion electrica industrial" id = "categoria" name = "categoria">Ver productos</button>
+                        <button type = "submit" value = "Distribucion electrica industrial y monitoreo de redes e instrumentos" id = "categoria" name = "categoria">Ver productos</button>
                         <h3>Distribucion electrica industrial</h3>
                         <p>Todo lo necesario en maniobra y monitoreo de redes de baja tensión, interruptores de potencia, ductos, bandejas, cables subterraneos y protecciones</p>
                     </figure>
