--- a/definitivo.html
+++ b/definitivo.html
@@ -60,13 +60,13 @@
           </li>
            <li>
             <a href="ver_usuarios.php">
-              <i class="fa-solid fa-list-ul"></i>
+              <i class="fa-solid fa-users"></i>
               <span>Ver usuarios que ingresaron</span>
             </a>
           </li>
            <li>
             <a href="ver_productos.php">
-              <i class="fa-solid fa-trash"></i>
+              <i class="fa-solid fa-box-open"></i>
               <span>Ver todos los productos </span>
             </a>
           </li>
