--- a/nuevo_producto_copiado.html
+++ b/nuevo_producto_copiado.html
@@ -70,6 +70,18 @@
               <span>Ver todos los productos </span>
             </a>
           </li>
+          <li>
+            <a href="eliminar_cliente.html">
+              <i class="fa-solid fa-user-minus"></i>
+              <span>Eliminar clientes</span>
+            </a>
+          </li>
+          <li>
+            <a href="crear_trabajador.html">
+              <i class="fa-solid fa-user-pen"></i>
+              <span>Crear usuario trabajador</span>
+            </a>
+          </li>
          <li>
              <a href="index_trabajador.html">
                <i class="fa-solid fa-house"></i>
