--- a/agregar-producto.html
+++ b/agregar-producto.html
@@ -64,7 +64,7 @@ body{
             <h2 class="title" id="productos">Ingresar nuevo producto</h2>
            
             <div class="sidebar">
-              <img src="imagenes/LOGO.ico"width="80" alt="">
+              <a href = "index_trabajador.html"><img src="imagenes/LOGO.ico"width="80" alt=""></a>
               <ul class="nav">
                 <li>
                   <a href="agregar-producto.html">
@@ -109,6 +109,12 @@ body{
                     </a>
                   </li>
                   <li>
+                    <a href="ver_pedidos_archivados.php">
+                      <i class="fa-solid fa-list-ul"></i>
+                      <span>Ver definicion pedidos</span>
+                    </a>
+                  </li>
+                  <li>
                     <a href="ver_usuarios.php">
                       <i class="fa-solid fa-users"></i>
                       <span>Ver usuarios que ingresaron</span>
@@ -120,6 +126,7 @@ body{
                       <span>Ver todos los productos </span>
                     </a>
                   </li>
+                  <li>
                   <a href="eliminar_cliente.html">
                     <i class="fa-solid fa-user-minus"></i>
                     <span>Eliminar clientes</span>
