--- a/nuevo_producto_copiado.html
+++ b/nuevo_producto_copiado.html
@@ -9,12 +9,63 @@
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
             <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         </head>
+        <style>
+          *{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+
+body{
+  box-sizing: border-box;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* Empieza el menu  */
+.sidebar{
+  position: fixed;
+  background: #516ba1;
+  width: 350px;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.sidebar h2{
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #ffffff;
+  background: #516ba1;
+  padding: 20px;
+  font-weight: bold;
+}
+
+
+.sidebar ul li {
+  margin: 20px 0;
+}
+
+.sidebar ul li a{
+  color: #ffffff;
+  padding: 0 30px;
+
+}
+.sidebar ul li a:hover{
+  color: #000000;
+  margin-left: 20px;
+  transition: 0.4s;
+}
+
+/* Termina el menu  */
+        </style>
     <body>
         <h2 class="title" id="productos">Solo el codigo de fabricante, no importa si es repetido</h2>
         <br>
     </hr>
      <div class="sidebar">
-       <img src="imagenes/LOGO.ico"width="80" alt="">
+      <a href = "index_trabajador.html"><img src="imagenes/LOGO.ico"width="80" alt=""></a>
        <ul class="nav">
          <li>
            <a href="agregar-producto.html">
@@ -56,6 +107,12 @@
             <a href="ver_pedidos.php">
               <i class="fa-solid fa-list-ul"></i>
               <span>Ver pedidos</span>
+            </a>
+          </li>
+          <li>
+            <a href="ver_pedidos_archivados.php">
+              <i class="fa-solid fa-list-ul"></i>
+              <span>Ver definicion pedidos</span>
             </a>
           </li>
            <li>
