--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ width: 10px;
 .prev, .next,.text {font-size: 14px}
 }}
         .slider1 {
-    width: 300vw;
+    width: 98vw;
     height: 10vw;
     margin-top: -10vw;
     overflow: hidden;
@@ -799,13 +799,13 @@ h2{
     margin-left: -80px;
     font-size: 17.3px;
     margin-top: 10px;
-    padding-left: 100px;
+    padding-left: 160px;
     
 }
 .pie-pagina .grupo-1 .box h1{
     color: #efefef;
     font-size: 20px;
-    margin-left: 20px;
+    margin-left: 100px;
     margin-top: 120px;
 }
 .pie-pagina .grupo-1 .red-social{
@@ -834,6 +834,7 @@ h2{
 .pie-pagina .grupo-2 small{
     font-size: 15px;
 }
+/* */la navbar/* */
 .head {
     display: flex;
     align-items: center;
@@ -844,7 +845,7 @@ h2{
     width: 100%;
     z-index: 100;
 }
-
+/* */fin navbar/* */
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
