--- a/contraseniamal.html
+++ b/contraseniamal.html
@@ -9,8 +9,8 @@
     <br>
     <h2>CONTRASEÑA ERRONEA</h2>   
     <br>
-    <a href="iniciar_sesion.html"><ul><button>Volver a intentar</button></ul></a>
-    <a href="registrarse.html"><ul><button>No tengo cuenta</button></ul></a>
+    <a href="iniciar_sesion.php"><ul><button>Volver a intentar</button></ul></a>
+    <a href="registrarse.php"><ul><button>No tengo cuenta</button></ul></a>
     </section>
 
 </body>
