--- a/index_cliente.html
+++ b/index_cliente.html
@@ -830,7 +830,7 @@ h2{
                 <figure>
                     <img src="imagenes/1x/DIST. INDUSTRIAL.jpg">
                     <div class="box1">
-                        <button type = "submit" value = "Distribucion electrica industrial" id = "categoria" name = "categoria">Ver productos</button>
+                        <button type = "submit" value = "Distribucion electrica industrial y monitoreo de redes e instrumentos" id = "categoria" name = "categoria">Ver productos</button>
                         <h3>Distribucion electrica industrial</h3>
                         <p>Todo lo necesario en maniobra y monitoreo de redes de baja tensión, interruptores de potencia, ductos, bandejas, cables subterraneos y protecciones</p>
                     </figure>
