--- a/usuarionoregistrado.html
+++ b/usuarionoregistrado.html
@@ -10,7 +10,7 @@
     <h2>USUARIO NO REGISTRADO</h2>   
     <br>
     <h3>Por favor registrese para poder realizar un pedido.</h3>
-    <a href="registrarse.html"><ul><button>Registrarse</button></ul></a>
+    <a href="registrarse.php"><ul><button>Registrarse</button></ul></a>
     </section>
 
 </body>
