--- a/index.html
+++ b/index.html
@@ -729,6 +729,7 @@ width: 10px;
     flex-direction: column;
     align-items:center;
     background: #101010;
+    
 }
 .about { /*edita el nosotros*/
     background: #171717;
@@ -870,7 +871,7 @@ h2{
 .pie-pagina .grupo-2 small{
     font-size: 15px;
 }
-/* */la navbar/* */
+
 .head {
     display: flex;
     align-items: center;
@@ -880,8 +881,10 @@ h2{
     position: fixed;
     width: 100%;
     z-index: 100;
+    min-width: 375px;
+    max-width: 1400px;
 }
-/* */fin navbar/* */
+
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
@@ -914,13 +917,13 @@ h2{
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="imagenes/inicio/asd.jpg" class="d-block w-100" alt="...">
+            <img src="imagenes/imagennn2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/inicio/120.jpg" class="d-block w-100" alt="...">
+            <img src="imagenes/imagennn.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/inicio/slidder3.jpg" class="d-block w-100" alt="...">
+            <img src="imagenes/imagennn3.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -1134,7 +1137,7 @@ h2{
         
     <div class="card">
         <figure>
-            <img src="imagenes/1x/cua1.jpg">
+            <img src="imagenes/objetivo.jpeg">
         </figure>
         <div class="contenido-card">
             <h3>COMPROMISO</h3>
@@ -1145,7 +1148,7 @@ h2{
     </div>
     <div class="card">
         <figure>
-            <img src="imagenes/1x/fondo.jpeg">
+            <img src="imagenes/compromiso.jpg">
         </figure>
         <div class="contenido-card">
             <h3>OBJETIVO</h3>
@@ -1155,7 +1158,7 @@ h2{
     </div>
     <div class="card">
         <figure>
-            <img src="https://image.freepik.com/foto-gratis/desarrollo-programadores-desarrollo-tecnologias-diseno-codificacion-sitios-web_18497-1090.jpg">
+            <img src="imagenes/soporte.jpg  ">
         </figure>
         <div class="contenido-card">
             <h3>ASESORAMIENTO TECNICO</h3>
