--- a/crear_trabajador.html
+++ b/crear_trabajador.html
@@ -44,7 +44,7 @@ body{
 
 
 .sidebar ul li {
-    margin: 18px 0;
+    margin: 16px 0;
 }
 
 .sidebar ul li a{
@@ -124,6 +124,12 @@ body{
                     <a href="ver_productos.php">
                       <i class="fa-solid fa-box-open"></i>
                       <span>Ver todos los productos</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="lista_de_clientes.php">
+                      <i class="fa-regular fa-address-book"></i>
+                      <span>Lista de clientes registrados</span>
                     </a>
                   </li>
                   <li>
