--- a/panel_control.html
+++ b/panel_control.html
@@ -44,7 +44,7 @@ body{
 
 
 .sidebar ul li {
-    margin: 18px 0;
+    margin: 16px 0;
 }
 
 .sidebar ul li a{
@@ -122,8 +122,8 @@ body{
                   </li>
                   <li>
                     <a href="lista_de_clientes.php">
-                      <i class="fa-solid fa-users"></i>
-                      <span>Ver lista de clientes</span>
+                      <i class="fa-regular fa-address-book"></i>
+                      <span>Lista de clientes registrados</span>
                     </a>
                   </li>
                   <li>
