--- a/editar-producto.html
+++ b/editar-producto.html
@@ -44,7 +44,7 @@ body{
 
 
 .sidebar ul li {
-  margin: 18px 0;
+  margin: 16px 0;
 }
 
 .sidebar ul li a{
@@ -118,6 +118,12 @@ body{
                     <a href="ver_usuarios.php">
                       <i class="fa-solid fa-users"></i>
                       <span>Ver usuarios que ingresaron</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="lista_de_clientes.php">
+                      <i class="fa-regular fa-address-book"></i>
+                      <span>Lista de clientes registrados</span>
                     </a>
                   </li>
                   <li>
