--- a/index.html
+++ b/index.html
@@ -205,8 +205,9 @@ width: 10px;
 }
 
 .containerall{
-    width: 100%;
-    height: 600px;
+    width:100vw;
+    height:100vh;
+    line-height:100vh;
     background: rgb(17, 17, 17);
     position: relative;
 }
@@ -251,6 +252,7 @@ width: 10px;
      margin-top: 70px;
      margin-bottom: 15px;
  }
+
  .container1 figure:hover > img{
      transform: scale(1.3);
  }
@@ -952,6 +954,9 @@ h2{
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-03.png" alt="">
                     </div>
                     <div class="slide1">
+                        <img src="imagenes/ft 103 1.png" alt="">
+                    </div>
+                    <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-04.png" alt="">
                     </div>
                     <div class="slide1">
@@ -962,13 +967,18 @@ h2{
                     </div>
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-07.png" alt="">
+                    </div> 
+                    <div class="slide1">
+                        <img src="imagenes/ft 103 3.png" alt="">
                     </div>
-        
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-08.png" alt="">
                     </div>
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-09.png" alt="">
+                    </div>
+                    <div class="slide1">
+                        <img src="imagenes/ft 103 2.png" alt="">
                     </div>
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-10.png" alt="">
@@ -981,6 +991,9 @@ h2{
                     </div>
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-13.png" alt="">
+                    </div>
+                    <div class="slide1">
+                        <img src="imagenes/ft 103 4.png" alt="">
                     </div>
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-14.png" alt="">
