--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -205,9 +205,8 @@ width: 10px;
 }
 
 .containerall{
-    width:100vw;
-    height:100vh;
-    line-height:100vh;
+    width: 100%;
+    height: 600px;
     background: rgb(17, 17, 17);
     position: relative;
 }
@@ -252,7 +251,6 @@ width: 10px;
      margin-top: 70px;
      margin-bottom: 15px;
  }
-
  .container1 figure:hover > img{
      transform: scale(1.3);
  }
@@ -418,7 +416,7 @@ width: 10px;
      will-change: transform;
  }
  .container4 figure .box4{
-     position: absolute; 
+     position: absolute;
      top: 0;
      width: 100%;
      height: 100%;
@@ -954,9 +952,6 @@ h2{
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-03.png" alt="">
                     </div>
                     <div class="slide1">
-                        <img src="imagenes/ft 103 1.png" alt="">
-                    </div>
-                    <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-04.png" alt="">
                     </div>
                     <div class="slide1">
@@ -968,19 +963,12 @@ h2{
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-07.png" alt="">
                     </div>
-                    
- 
-                    <div class="slide1">
-                        <img src="imagenes/ft 103 3.png" alt="">
-                    </div>
+        
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-08.png" alt="">
                     </div>
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-09.png" alt="">
-                    </div>
-                    <div class="slide1">
-                        <img src="imagenes/ft 103 2.png" alt="">
                     </div>
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-10.png" alt="">
@@ -993,9 +981,6 @@ h2{
                     </div>
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-13.png" alt="">
-                    </div>
-                    <div class="slide1">
-                        <img src="imagenes/ft 103 4.png" alt="">
                     </div>
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-14.png" alt="">
