--- a/index_cliente.html
+++ b/index_cliente.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -884,68 +884,13 @@ h2{
     min-width: 375px;
     max-width: 1400px;
 }
-/*Responsive de la navbar*/
-@media screen and (max-width:480px){
-    .navbar a{
-        font-size: 10px;
-        text-align: center;
-        width: 100%;
-        display: block !important;
-    }
-    .navbar a:hover{
-        width: 35%;
-    }
-    .head{
-        width: 300px;
-        height: 0px;
-    }
-    .head .img{
-        width: 10%;
-    }
-}
-@media screen and (max-width:600px){
-    .navbar a{
-        font-size: 10px;
-        text-align: center;
-        width: 30%;
-        display: block !important;
-    }
-    .navbar a:hover{
-        width: 35%;
-    }
-    .head{
-        width: 100%;
-        height: 0px;
-    }
-    .head .img{
-        width: 30%;
-        height: 20%;
-    }
-}
-@media screen and (max-width: 970px){
-    .navbar a{
-        font-size: 15px;
-        text-align: center;
-        width: 30%;
-        display: block !important;
-    }
-    .navbar a:hover{
-        width: 45%;
-    }
-    .head{
-        width: 100%;
-        height: 200px;
-    }
-    .head .img{
-        width: 40%;
-    }
-}
+
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
     <title>ENERPAMPA.SA</title>
 </head>
-<body> 
+<body>
     <header>
     <div class="head">
 
@@ -970,22 +915,16 @@ h2{
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div> 
+        </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <source srcset="imagen_480.jpg" media="(max-width: 480px)">
-            <source srcset="imagen_800.jpg" media="(max-width: 800px)">
-            <img src="imagenes/imagennn2.jpg" width= 100% class="d-block w-100" alt="...">
+            <img src="imagenes/imagennn2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <source srcset="imagen_480.jpg" media="(max-width: 480px)">
-            <source srcset="imagen_800.jpg" media="(max-width: 800px)">
-            <img src="imagenes/imagennn.jpg" width= 100% class="d-block w-100" alt="...">
+            <img src="imagenes/imagennn.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <source srcset="imagen_480.jpg" media="(max-width: 480px)">
-            <source srcset="imagen_800.jpg" media="(max-width: 800px)">
-            <img src="imagenes/imagennn3.jpg" width= 100% class="d-block w-100" alt="...">
+            <img src="imagenes/imagennn3.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
